*Empty MediaWiki Message*

--- a/დემნა_უფლისწული.mw
+++ b/დემნა_უფლისწული.mw
@@ -1,6 +1,6 @@
 '''დემნა (დემეტრე) უფლისწული''' (  †  [[1178]]), საქართველოს მეფის [[დავით V|დავით V-ის]] ძე. დავით V-ის გარდაცვალების შემდეგ მამამისმა [[დემეტრე I|დემეტრე I-მა]] თავისი უმცროსი ვაჟი [[გიორგი III, საქართველოს მეფე|გიორგი (შემდეგ გიორგი III)]] გამოაცხადა თანამოსაყდრედ, რითაც დემნა (დემეტრე) უფლისწულმა ტახტზე უფლება დაკარგა. 
 
-დემნა (დემეტრე) უფლისწულის კანონიერი უფლების დაცვის საბაბით მეფის ცენტრალური ხელისუფლების გაძლიერების მოწინააღმდეგე დიდგვარიანმა ფეოდალებმა [[ამირსპასალარი|ამირსპასალარ]] [[ორბელი, ივანე სუმბატის ძე|ივანე ორბელის]] მეთაურობით [[1177]] აჯანყება მოაწყვეს გიორგი III-ის წინააღმდეგ. როცა აჯანყების დამარცხება ცხადი გახდა დემნა (დემეტრე) უფლისწული გიორგი III-ს დანებდა და პატიება სთხოვა. 
+დემნა (დემეტრე) უფლისწულის კანონიერი უფლების დაცვის საბაბით მეფის ცენტრალური ხელისუფლების გაძლიერების მოწინააღმდეგე დიდგვაროვანმა ფეოდალებმა [[ამირსპასალარი|ამირსპასალარ]] [[ორბელი, ივანე სუმბატის ძე|ივანე ორბელის]] მეთაურობით [[1177]] აჯანყება მოაწყვეს გიორგი III-ის წინააღმდეგ. როცა აჯანყების დამარცხება ცხადი გახდა დემნა (დემეტრე) უფლისწული გიორგი III-ს დანებდა და პატიება სთხოვა. 
 
 ტახტის მაძიებელ უფლისწულთა მიმართ მოქმედი კანონის საფუძველზე მას თვალები დათხარეს და დაასაჭურისეს. ჩანს, უფლისწულმა ვერ გაუძლო სასჯელს და გარდაიცვალა.
 
