*Empty MediaWiki Message*

--- a/მერაბ_მამარდაშვილი.mw
+++ b/მერაბ_მამარდაშვილი.mw
@@ -1,9 +1,9 @@
 [[სურათი:merab_mamardashvili.jpg|thumb|250px||მერაბ მამარდაშვილი]]
 '''მერაბ მამარდაშვილი''' (1930 - 1990) -- ქართველი ფილოსოფოსი, მეცნიერებათა დოქტორი (1968), პროფესორი (1972). დაიბადა გორში. 1955 წელს დაამთავრა მოსკოვის სახელმწიფო უნივერსიტეტის ფილოსოფიის ფაკულტეტი. 1955-1987 წლებში სამეცნიერო ჟურნალი "ვოპროსი ფილოსოფიი" რედაქტორის მოადგილეა, მოსკოვის სახ. უნივერსიტეტის პროფესორი და რუსეთის მეცნიერებათა აკადემიის მოსკოვის ფილოსოფიის ინსტიტუტის უფროსი მეცნიერ-მუშაკია.
 
-1987-1990 წლებში მამარდაშვილი საქართველოს მეცნიერებათა აკადემიის წერეთლის ფილოსოფიის ინსტიტუტის განყოფილების უფროსია და თბილისის სახელმწიფო უნივერსიტეტის პროფესორი. ლექციები წაუკითხავს გერმანიაში, საფრანგეთსა და სხვა ქვეყნებში.
+1987-1990 წლებში მამარდაშვილი საქართველოს მეცნიერებათა აკადემიის ს. წერეთლის სახელობის ფილოსოფიის ინსტიტუტის განყოფილების გამგეა და თბილისის სახელმწიფო უნივერსიტეტის პროფესორი. სხვადასხვა დროს ლექციებს კითხულობდა გერმანიაში, საფრანგეთსა და სხვა ქვეყნებში.
 
-გერმანული ფილოსოფიის (განსაკ. იმანუელ კანტის) გავლენის ქვეშ მყოფი მამარდაშვილის ძირითადი წვლილი აღქმის რაციონლისტურ თეორიაშია.
+გერმანული ფილოსოფიის (განსაკ. იმანუელ კანტის) გავლენის ქვეშ მყოფ მამარდაშვილს განსაკუთრებული   წვლილი მიუძღვის აღქმის რაციონლისტურ თეორიაში.
 
 2001 წლის მაისში თბილისში გაიხსნა მამარდაშვილის მონუმენტი.
 
@@ -17,6 +17,7 @@
 *"Стрела познания"
 *"Лекции по античной философии"
 
+[[კატეგორია:ქართველები]]
 [[კატეგორია:ქართველი ფილოსოფოსები]]
 
 [[en:Merab Mamardashvili]]
