--- a/მერაბ_მამარდაშვილი.mw
+++ b/მერაბ_მამარდაშვილი.mw
@@ -3,7 +3,7 @@
 
 1987-1990 წლებში მამარდაშვილი საქართველოს მეცნიერებათა აკადემიის ს. წერეთლის სახელობის ფილოსოფიის ინსტიტუტის განყოფილების გამგეა და თბილისის სახელმწიფო უნივერსიტეტის პროფესორი. სხვადასხვა დროს ლექციებს კითხულობდა გერმანიაში, საფრანგეთსა და სხვა ქვეყნებში.
 
-გერმანული ფილოსოფიის (განსაკ. იმანუელ კანტის) გავლენის ქვეშ მყოფ მამარდაშვილს განსაკუთრებული   წვლილი მიუძღვის აღქმის რაციონლისტურ თეორიაში.
+გერმანული ფილოსოფიის (განსაკ. იმანუელ კანტის) გავლენის ქვეშ მყოფ მამარდაშვილს განსაკუთრებული   წვლილი მიუძღვის აღქმის რაციონალისტურ თეორიაში. მნიშვნელოვანია მისი წვლილი მეცნიერების ფილოსოფიაშიც.
 
 2001 წლის მაისში თბილისში გაიხსნა მამარდაშვილის მონუმენტი.
 
