--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -338,6 +338,10 @@
 
 ამავდროულად იულიანუსის ძმისშვილმა პროქოპიუსმა დაიკავა კონსტანტინოპოლი და თავი იმპერატორად გამოაცხადა. იგი დაპირდა არმიას იულიანუსის პოლიტიკის გაგრძელება და მათი მხარდაჭერა მოიპოვა, მაგრამ აღმოსავლელმა დიდგვაროვნებმა არ დაუჭირეს მის პოლიტიკას მხარი. ვალენტუსსმა მოახერხა ამ აჯანყების ჩახშობა და [[366]] წელს პროქოპიუსი სიკვდილით დასაჯეს.
 
+[[366]]-[[369]] წლებში მიმდინარეობდა პროქოპიუსის მხარდამჭერ გოთებთან ბრძოლა, რაც იმპერიის გამარჯვებით დასრულდა. [[370]] წელს დუნაისპირეთში სიტუაცია დაიძაბა, მეზიუმს თავს სარმატები დაესხნენ. მათთან ბრძოლაში დაიღუპა ვალენტინიანუსი. დასავლეთ იმპერიის მმართველები გახდნენ მისი ძმები, [[ჰორაციანუსი]], რომელიც უკვე იყო მისი თანამმართველი ([[367]]-[[383]]) და მცირეწლოვანი [[ვალენტინიანუს II]] ([[375]]-[[392]]). 
+
+[[376]] წელს ჰუნების მიერ შევიწროებული ვესტგოთები, იმპერატორის თანხმობით, თრაკიაში დასახლდნენ. მალე ამ რეგიონში ატყდა აჯანყება, რომელსაც ბევრი ქალაქი შეუერთდა. თანდათან გოთების სტიქიური აჯანყება გადაიზარდა რომაელეის წინააღმდეგ ნამდვილ ომში.
+
 ==დასავლეთ რომის იმპერიის აღსასრული==
 
 {{ესკიზი}}
