*Empty MediaWiki Message*

--- a/მერაბ_მამარდაშვილი.mw
+++ b/მერაბ_მამარდაშვილი.mw
@@ -1,5 +1,5 @@
 [[სურათი:merab_mamardashvili.jpg|thumb|250px||მერაბ მამარდაშვილი]]
-'''მერაბ მამარდაშვილი''' (1930 - 1990) -- ქართველი ფილოსოფოსი, მეცნიერებათა დოქტორი (1968), პროფესორი (1972). დაიბადა გორში. 1955 წელს დაამთავრა მოსკოვის სახელმწიფო უნივერსიტეტის ფილოსოფიის ფაკულტეტი. 1965-1987 წლებში სამეცნიერო ჟურნალის "ვოპროსი ფილოსოფიი" მთავარი რედაქტორის მოადგილეა, მოსკოვის სახელმწიფო უნივერსიტეტის პროფესორი და რუსეთის მეცნიერებათა აკადემიის მოსკოვის ფილოსოფიის ინსტიტუტის უფროსი მეცნიერ თანამშრომელია.
+'''მერაბ მამარდაშვილი''' (1930 - 1990) -- ქართველი ფილოსოფოსი, მეცნიერებათა დოქტორი (1968), პროფესორი (1972). დაიბადა გორში. 1955 წელს დაამთავრა მოსკოვის სახელმწიფო უნივერსიტეტის ფილოსოფიის ფაკულტეტი. 1968-1987 წლებში სამეცნიერო ჟურნალის "ვოპროსი ფილოსოფიი" მთავარი რედაქტორის მოადგილე, მოსკოვის სახელმწიფო უნივერსიტეტის პროფესორი და რუსეთის მეცნიერებათა აკადემიის მოსკოვის ფილოსოფიის ინსტიტუტის უფროსი მეცნიერ თანამშრომელია.
 
 1987-1990 წლებში მამარდაშვილი საქართველოს მეცნიერებათა აკადემიის ს. წერეთლის სახელობის ფილოსოფიის ინსტიტუტის განყოფილების გამგეა და თბილისის სახელმწიფო უნივერსიტეტის პროფესორი. სხვადასხვა დროს ლექციებს კითხულობდა გერმანიაში, საფრანგეთსა და სხვა ქვეყნებში.
 
