--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -340,7 +340,9 @@
 
 [[366]]-[[369]] წლებში მიმდინარეობდა პროქოპიუსის მხარდამჭერ გოთებთან ბრძოლა, რაც იმპერიის გამარჯვებით დასრულდა. [[370]] წელს დუნაისპირეთში სიტუაცია დაიძაბა, მეზიუმს თავს სარმატები დაესხნენ. მათთან ბრძოლაში დაიღუპა ვალენტინიანუსი. დასავლეთ იმპერიის მმართველები გახდნენ მისი ძმები, [[ჰორაციანუსი]], რომელიც უკვე იყო მისი თანამმართველი ([[367]]-[[383]]) და მცირეწლოვანი [[ვალენტინიანუს II]] ([[375]]-[[392]]). 
 
-[[376]] წელს ჰუნების მიერ შევიწროებული ვესტგოთები, იმპერატორის თანხმობით, თრაკიაში დასახლდნენ. მალე ამ რეგიონში ატყდა აჯანყება, რომელსაც ბევრი ქალაქი შეუერთდა. თანდათან გოთების სტიქიური აჯანყება გადაიზარდა რომაელეის წინააღმდეგ ნამდვილ ომში.
+[[376]] წელს ჰუნების მიერ შევიწროებული ვესტგოთები, იმპერატორის თანხმობით, თრაკიაში დასახლდნენ. მალე ამ რეგიონში ატყდა აჯანყება, რომელსაც ბევრი ქალაქი შეუერთდა. თანდათან გოთების სტიქიური აჯანყება გადაიზარდა რომაელების წინააღმდეგ ნამდვილ ომში. საფრთხე იმდენად დიდი იყო რომ ვალენტინუსი იძულებული გახდა აღმოსავლეთის ლეგიონები გადაეყვანა კონსტანტინოპოლში და პირადად სათავეში ჩაუდგა გოთების წინააღმდეგ ლაშქრობას. მის დასახმარებლად იტალიიდან ჰორაციანუსის არმია გამოემართა. [[378]] წლის [[9 აგვისტო|9 აგვისტოს]] [[ადრიანოპოლისის ბრძოლა|ადრიანოპოლისთან]] სისხლისმღვრელ ბრძოლაში რომაელები სასტიკად დამარცხდნენ. ვალენტინუსი ბრძოლაში დაიღუპა.
+
+ამის შემდეგ გოთები თავისუფლად თარეშობდნენ მთელს აღმოსავლეთ რომის იმპერიაშიც, ისინი კონსტანტინოპოლსაც მიადგნენ, მაგრამ მისი აღება ვერ შეძლეს.
 
 ==დასავლეთ რომის იმპერიის აღსასრული==
 
