--- a/9_აგვისტო.mw
+++ b/9_აგვისტო.mw
@@ -2,6 +2,7 @@
 
 ==დღის მოვლენები==
 *[[ძვ. წ. 49]] : [[თარსალუსის ბრძოლა|თარსალუსთან]] მოხდა [[იულიოს კეისარი|კეისარსა]] და [[გნეუს პომპეუს მაგნუსი|პომპეუსს]] შორის გადამწყვეტი ბრძოლა.
+*[[378]] : ადრიანოპოლისთან ბრძოლაში რომაელებმა განიცადეს გოთებისგან სასტიკი დამარცხება. დაიღუპა აღმოსავლეთ რომის იმპერატორი [[ვალენტინუსი]].
 *[[1902]] : [[დიდი ბრიტანეთი|დიდი ბრიტანეთის]] მეფის ტახტზე ავიდა [[ედუარდ VII]].
 *[[1945]] : [[აშშ|აშშ-ს]] საბრძოლო თვითვმფრინავმა [[იაპონია|იაპონიის]] ქ. [[ნაგასაკი|ნაგასაკიში]] ჩამოაგდო ატომური ბომბი. მის აფეთქებას მოჰყვა დაახლოებით 80.000 მსხვერპლი.
 *[[1965]] : [[სინგაპური]] გახდა დამოუკიდებლი სახელმწიფო.
