*Empty MediaWiki Message*

--- a/მერაბ_მამარდაშვილი.mw
+++ b/მერაბ_მამარდაშვილი.mw
@@ -1,9 +1,9 @@
-[[სურათი:merab_mamardashvili.jpg|thumb|280px||მერაბ მამარდაშვილი]]
+[[სურათი:merab_mamardashvili.jpg|thumb|290px||მერაბ მამარდაშვილი]]
 '''მერაბ მამარდაშვილი''' (1930 - 1990) -- გამოჩენილი ქართველი ფილოსოფოსი, მეცნიერებათა დოქტორი (1968), პროფესორი (1972). დაიბადა გორში. 1955 წელს დაამთავრა მოსკოვის სახელმწიფო უნივერსიტეტის ფილოსოფიის ფაკულტეტი. 1968-1987 წლებში სამეცნიერო ჟურნალის "ვოპროსი ფილოსოფიი" მთავარი რედაქტორის მოადგილე, მოსკოვის სახელმწიფო უნივერსიტეტის პროფესორი და რუსეთის მეცნიერებათა აკადემიის მოსკოვის ფილოსოფიის ინსტიტუტის უფროსი მეცნიერ თანამშრომელია.
 
 1987-1990 წლებში მამარდაშვილი საქართველოს მეცნიერებათა აკადემიის ს. წერეთლის სახელობის ფილოსოფიის ინსტიტუტის განყოფილების გამგეა და თბილისის სახელმწიფო უნივერსიტეტის პროფესორი. სხვადასხვა დროს ლექციებს კითხულობდა გერმანიაში, საფრანგეთსა და სხვა ქვეყნებში.
 
-გერმანული ფილოსოფიის (განსაკ. იმანუელ კანტის) გავლენის ქვეშ მყოფ მამარდაშვილს განსაკუთრებული   წვლილი მიუძღვის აღქმის რაციონალისტურ თეორიაში. მნიშვნელოვანია მისი წვლილი მეცნიერების ფილოსოფიაშიც.
+გერმანული ფილოსოფიის (განსაკუთრებით იმანუელ კანტის) გავლენის ქვეშ მყოფ მამარდაშვილს განსაკუთრებული   წვლილი მიუძღვის აღქმის რაციონალისტურ თეორიაში. მნიშვნელოვანია მისი წვლილი მეცნიერების ფილოსოფიაშიც. დიდია მისი დამსახურება მარსელ პრუსტის შემოქმედების კვლევაში.
 
 2001 წლის მაისში თბილისში გაიხსნა მამარდაშვილის ბიუსტი (ძეგლის ავტორი: ერნსტ ნეიზვესტნი).
 
