--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -344,6 +344,7 @@
 
 ამის შემდეგ გოთები თავისუფლად თარეშობდნენ მთელს აღმოსავლეთ რომის იმპერიაშიც, ისინი კონსტანტინოპოლსაც მიადგნენ, მაგრამ მისი აღება ვერ შეძლეს. ჰორაციანუსმა ესპანეთიდან [[თეოდოსე]] გამოიძახა, აღმოსავლეთ იმპერიის ავგუსტუსად დანიშნა და აჯანყების ჩახშობა დაავალა. მან ენერგიული ზომები მიიღო არმიის ბრძოლისუნარიანობის აღსადგენად და ასევე მრავალი ეფექტური დიპლომატიური ნაბიჯი გადადგა, რის წყალობითაც [[382]] წელს მოხერხდა სამშვიდობო ხელშეკრულების დადება გოთებთან. ამ მოლაპარაკების თანახმად გოთებს შეეძლოთ ილირიაში დასახლება თავისი კანონებით და ადათ წესებით. 
 
+[[სურათი:Roman_empire_395.jpg|thumb|რომის იმპერიის ადმინისტრაციული დაყოფა IV საუკუნის მიწურულს]]
 თეოდოსეს მართველობის პერიოდში მიღწეულ იქნა იმპერიის უკანასკნელი ეფემერული გაერთიანება. იგი უმეტესად დამოკიდებული იყო გოთებზე. დასავლეთ იმპერიაში კი პოლიტიკურად არასტაბილური სიტუაცია იყო. [[387]] წელს ჰორაციანუსი უზურპატორმა მაგნუს მაქსიმუსმა მოკლა. ვალენტინიანუს II-მა მოახერხა უზურპატორიხ დამარცხება და მოკვლა. ფაქტიური მმართველი კი გალური ლეგიონების მხედართმთავარი არბოგასტუსი იყო, ვინც ბოლო ბოლო [[392]] წელს მაინც შეცვალა ვალენტინიანუს II ევგენიუსით. ევგენიუსმა სცადა იულიანუსის რელიგიური პოლიტიკის აღორძინება. [[394]] წელს იგი დაამარცხა თეოდოსეს არმიამ.
 
 თეოდოსე ცხოვრების უკანასკნელი 3 წლის განმავლობაში იმპერიის ერთადერთი მმართველი იყო. [[395]] წელს, მისი სიკვდილის შემდეგ რომის იმპერია საბოლოოდ გაიყო ორ ნაწილად.
