*Empty MediaWiki Message*

--- a/ევგენ_ღვალაძე.mw
+++ b/ევგენ_ღვალაძე.mw
@@ -1,8 +1,8 @@
 [[Image:Egvaladze.gif|thumb|180px|ევგენ ღვალაძე (1927 წ.)]]
 
-'''ევგენ (გენო) ღვალაძე''' (* [[1900]] წლის [[13 მაისი]] ― †  [[1937]] წლის [[25 ოქტომბერი]]), თვალსაჩინო [[ქართველები|ქართველი]] ადვოკატი, [[საქართველო|საქართველოს]] [[1921]]-[[1937]] წლების ეროვნულ-განმათავისუფლებელი მოძრაობის ცნობილი მოღვაწე. 
+'''ევგენ (გენო) ღვალაძე''' (* [[1900]] წლის [[13 მაისი]] ― †  [[1937]] წლის [[15 ოქტომბერი]]), თვალსაჩინო [[ქართველები|ქართველი]] ადვოკატი, [[საქართველო|საქართველოს]] [[1921]]-[[1937]] წლების ეროვნულ-განმათავისუფლებელი მოძრაობის ცნობილი მოღვაწე. 
 
-დაიბადა ზემო იმერეთის სოფელ [[სვერი|სვერში]] ([[ჭიათურა|ჭიათურის]] რაიონი) წმ. გიორგის ორდენის კავალერის, კავალერიის გადამდგარი ოფიცრის, მანგანუმის მრეწველის '''არტემ ღვალაძის''' (1862-1918) ოჯახში. აღსანიშნავია, რომ მისი წინაპრები იყვნენ [[იმერეთის სამეფო|იმერეთის მეფეთა]] [[სოლომონ I|სოლომონ I-ის]] და [[სოლომონ II|სოლომონ II-ის]] "ფიცის კაცები". ამასთან, იგი იყო იმერეთის მეფის [[დავით II, გიორგი VII-ის ძე|დავით II-ის]] ასულის, - '''ატატო ბაგრატიონის''' ჩამომავალი.
+დაიბადა ზემო იმერეთის სოფელ [[სვერი|სვერში]] ([[ჭიათურა|ჭიათურის]] რაიონი) წმ. გიორგის ორდენის კავალერის, კავალერიის გადამდგარი ოფიცრის, მანგანუმის მრეწველის '''არტემ ღვალაძის''' (1862-1918) ოჯახში. აღსანიშნავია, რომ იგი იყო იმერეთის მეფის [[დავით II, გიორგი VII-ის ძე|დავით II-ის]] ასულის, - '''ატატო ბაგრატიონის''' ჩამომავალი.
 
 ===განათლება===
 
@@ -28,7 +28,7 @@
 
 გარდა ყოველივე ზემოთქმულისა, ევგენ ღვალაძე იყო ეროვნული ხასიათის 50-ზე მეტი ნარკვევის და პუბლიცისტური წერილის ავტორი. ეს წერილები ქვეყნდებოდა [[1916]]-[[1924]] წლების ქართულ პერიოდულ პრესაში. 
 
-[[1937]] წლის [[9 აგვისტო|9 აგვისტოს]] იგი კვლავ დააპატიმრეს. იმავე წლის 5 ოქტომბერს ე.წ. "შინსახკომის" დიდმა სამეულმა მას მიუსაჯა დახვრეტა. განაჩენი სისრულეში იქნა მოყვანილი იმავე წლის 25 ოქტომბერს, თბილისში.
+[[1937]] წლის [[9 აგვისტო|9 აგვისტოს]] იგი კვლავ დააპატიმრეს. იმავე წლის 5 ოქტომბერს ე.წ. "შინსახკომის" დიდმა სამეულმა მას მიუსაჯა დახვრეტა. განაჩენი სისრულეში იქნა მოყვანილი იმავე წლის 15 ოქტომბერს, თბილისში.
 
 ევგენ ღვალაძის მეუღლე, - [[ღვალაძე, თამარ|თამარ ღვალაძე]] (1902-1986) იყო თვალსაჩინო მკვლევარი-ბიბლიოგრაფი და პედაგოგი. მეცნიერებისა და კულტურის სხვადასხვა დარგში ნაყოფიერ მოღვაწეობას ეწევიან მათი შვილები: თვალსაჩინო თეატრმცოდნე და პედაგოგი [[ღვალაძე-ჭაბუკიანი, ლონდა|ლონდა ღვალაძე-ჭაბუკიანი]], ცნობილი ფილოლოგი-არაბისტი, დოცენტი [[ღვალაძე, ლატავრა|ლატავრა ღვალაძე]] და ცნობილი ბოტანიკოსი, პროფესორი [[ღვალაძე, გურანდა|გურანდა ღვალაძე]]. ვაჟი, თვალსაჩინო ინჟინერ-გეოლოგი [[ღვალაძე, ნოდარ|ნოდარ ღვალაძე]] გარდაიცვალა 1992 წელს. 
 
