--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -347,7 +347,9 @@
 [[სურათი:Roman_empire_395.jpg|thumb|რომის იმპერიის ადმინისტრაციული დაყოფა IV საუკუნის მიწურულს]]
 თეოდოსეს მართველობის პერიოდში მიღწეულ იქნა იმპერიის უკანასკნელი ეფემერული გაერთიანება. იგი უმეტესად დამოკიდებული იყო გოთებზე. დასავლეთ იმპერიაში კი პოლიტიკურად არასტაბილური სიტუაცია იყო. [[387]] წელს ჰორაციანუსი უზურპატორმა მაგნუს მაქსიმუსმა მოკლა. ვალენტინიანუს II-მა მოახერხა უზურპატორიხ დამარცხება და მოკვლა. ფაქტიური მმართველი კი გალური ლეგიონების მხედართმთავარი არბოგასტუსი იყო, ვინც ბოლო ბოლო [[392]] წელს მაინც შეცვალა ვალენტინიანუს II ევგენიუსით. ევგენიუსმა სცადა იულიანუსის რელიგიური პოლიტიკის აღორძინება. [[394]] წელს იგი დაამარცხა თეოდოსეს არმიამ.
 
-თეოდოსე ცხოვრების უკანასკნელი 3 წლის განმავლობაში იმპერიის ერთადერთი მმართველი იყო. [[395]] წელს, მისი სიკვდილის შემდეგ რომის იმპერია საბოლოოდ გაიყო ორ ნაწილად.
+თეოდოსეს მმართველობის პერიოდში არეანობა კათოლიკობამ საბოლოოდ დაამარცხა, იმპერატორმა ნიკეის კრებაზე მიღებული დებულებების დასაცავად ედიქტი გამოსცა [[380]] წელს. იგი ასევე ებრძოდა წარმართობას, მისი ბრძანებით დაინგრა უამრავი ტაძარი. [[393]] წელს უკანასკნელად ჩატარდა ოლიმპიური თამაშები - ანტკური და წარმართული კულტურის განუყოფელი ნაწილი.
+
+თეოდოსეს სიკვდილის შემდეგ, [[395]] წელს, დასავლეთ რომის იმპერიის მმართველი 11 წლის ჰონორიუსი გახდა, ხოლო აღმოსავლეთის 18 წლის არკადიუსი.
 
 ==დასავლეთ რომის იმპერიის აღსასრული==
 
