changing flag (png->svg)

--- a/შვედეთი.mw
+++ b/შვედეთი.mw
@@ -5,7 +5,7 @@
 
 {| cellpadding=2 cellspacing=0
 |- align=center
-| width="140px" | <div style="background-color: #000; padding: 1px; float: left">[[Image:Sweden_flag_300.png|130px|შვედეთის დროშა]]</div>
+| width="140px" | <div style="background-color: #000; padding: 1px; float: left">[[Image:Flag of Sweden.svg|130px|შვედეთის დროშა]]</div>
 | width="120px" | [[Image:Sweden_coat.png|130px|შვედეთის გერბი]]
 |- align=center
 | ([[შვედეთის დროშა|დეტალურად]]) || ([[Media:Sweden_coat.png|სრული ზომა]])
