/* დასავლეთ რომის იმპერიის აღსასრული */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -353,7 +353,9 @@
 
 ==დასავლეთ რომის იმპერიის აღსასრული==
 
-{{ესკიზი}}
+მცირეწლოვანი ჰონორიუსის ტახტზე ასვლის შემდეგ იმპერიის მთავრობის სათავეში ვანდალური წარმოშვების [[სტილიხონუსი]] იდგა. მის წინაშე ორი მოცანა იდგა: დაეცვა იტალია ბარბაროსების შემოჭრისგან და აღეკვეთა გალური სეპარატიზმი.
+
+
 
 
 <center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
