/* დასავლეთ რომის იმპერიის აღსასრული */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -355,6 +355,12 @@
 
 მცირეწლოვანი ჰონორიუსის ტახტზე ასვლის შემდეგ იმპერიის მთავრობის სათავეში ვანდალური წარმოშვების [[სტილიხონუსი]] იდგა. მის წინაშე ორი მოცანა იდგა: დაეცვა იტალია ბარბაროსების შემოჭრისგან და აღეკვეთა გალური სეპარატიზმი.
 
+[[402]] წელს გოთების შემოსევა იტალიაშუ დიდი სირთულით შეაჩერეს. [[405]] წელს აღმოსავლეთ ალპებიდან შემოიჭრნენ გოთები და ფლორენციამდე მიაღწიეს. აქ მოხერხდა მათი დამარცხება. იმპერიის ისტორიულ დედაქალაქს რომს და იმპერატორის რეზიდენციას - რავენას სერიოზული საფრთხე ემუქრებოდა. ამ ქალაქების გასამაგრებლად სტილიხონუსმა გადმოიყვანა ჯარები ბრიტანეთიდან და გალიიდან. ამით მან შეასუსტა ამ პროვინციების დაცვა. ამით [[407]] წელს ისარგებლეს ალანებმა, ვანდალებმა, სვევებმა, რომლებმაც გადმოკვეთეს რეინზე საზღვარი და შეესივნენ გალიას. აქაური არისტოკრატია იძულებული გახდა თვითონ ეხელმძღანელათ თავდაცვისთვის, ვინაიდან იმპერატორისგან დახმარების იმედი არ ჰქონდათ.
+
+[[407]] წელს გალიაში არმიამ იმპერატორად კონსტანტინე აღიარა. მან შეძლო ვანდალების განდევნა, რეინის საზღვრის გამაგრება და გალიაში სტაბილურობის აღდგენა. ცენტრალური ხელისუფლების უმოქმედობამ გააძლიერა კონსტანტინეს პოზიციები გალიაში. 
+
+[[408]] წელს სტილიხონუსი მოკლეს. გოთებთან სამსვილობო ხელშეკრულება დაირღვა, რის შედეგადაც ეს უკანასკნელნი ალარიქუსის მეთაურობით შეიჭრნენ იტალიაში. შემოდგომაზე ალარიქუსმა ალყა შემოარტყა რომს. რომის მოსახლეობამ თავის დახსნა მხოლოდ დიდი გამოსასყიდის გადახდის შედეგად შეძლო. ამის შემდეგ ალარიქუსმა სცადა იმპერატორთან მოლაპარაკება ეწარმოებინა, მაგრამ მმართველმა წრეებმა ჩაშალეს მოლაპარაკება. ალარიქუსი ისევ რომისკენ გაემართა, რათა დაეძალებინა იმპერატორი მიეღო მისთვის სასურველი პირობები. იმპერატორმა რომი ფაქტიურად გაწირა. [[410]] წლის [[24 აგვისტო|24 აგვისტოს]] რომის ჭიშკარი მონებმა გახსნეს და გოთებმა იღეს ქალაქი. იმ დროინდელი სამყაროსთვის ეს უდიდესი კატასტროფა იყო. რომმა დაცემის შემდეგაც განაგრძო არსებობა, მაგრამ მან დაკარგა ყოველგვარი მნიშვნელობა. რომის ფორუმი, სადაც ოდესღაც მთელი ხმელთაშუაზღვისპირეთის ბედი წყდებოდა, დაცარიელდა და ბალახი ამოვიდა. ამ დღიდან დასავლეთ რომის იმპერიის განწირულობა ცხადი გახდა. იმპერიის საბოლოო დაცემა მხოლოდ დროის საკითხი იყო.
+
 
 
 
