/* რომის აღება ვესტგოთების მიერ */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -363,7 +363,9 @@
 
 [[408]] წელს სტილიხონუსი მოკლეს. გოთებთან სამშვილობო ხელშეკრულება დაირღვა, რის შედეგადაც ეს უკანასკნელნი ალარიქუსის მეთაურობით შეიჭრნენ იტალიაში. შემოდგომაზე ალარიქუსმა ალყა შემოარტყა რომს. რომის მოსახლეობამ თავის დახსნა მხოლოდ დიდი გამოსასყიდის გადახდის შედეგად შეძლო. ამის შემდეგ ალარიქუსმა სცადა იმპერატორთან მოლაპარაკება ეწარმოებინა, მაგრამ მმართველმა წრეებმა ჩაშალეს მოლაპარაკება. ალარიქუსი ისევ რომისკენ გაემართა, რათა დაეძალებინა იმპერატორი მიეღო მისთვის სასურველი პირობები. იმპერატორმა რომი ფაქტიურად გაწირა. '''[[410]] წლის [[24 აგვისტო|24 აგვისტოს]] რომის ჭიშკარი მონებმა გახსნეს და გოთებმა აიღეს ქალაქი'''. იმ დროინდელი სამყაროსთვის ეს უდიდესი კატასტროფა იყო. რომმა დაცემის შემდეგაც განაგრძო არსებობა, მაგრამ მან დაკარგა ყოველგვარი მნიშვნელობა. რომის ფორუმი, სადაც ოდესღაც მთელი ხმელთაშუაზღვისპირეთის ბედი წყდებოდა, დაცარიელდა და ბალახი ამოვიდა. ამ დღიდან დასავლეთ რომის იმპერიის განწირულობა ცხადი გახდა. იმპერიის საბოლოო დაცემა მხოლოდ დროის საკითხი იყო.
 
+===ბარბაროსული სახელმწიფოების ჩამოყალიბება===
 
+ამ მოვლენების შემდეგ იმპერატორი იძულებული გახდა დათანხმებულიყო იმპერიის ტერიტორიაზე ნახევრად დამოუკიდებელი ბარბაროსული სახელმწიფოების ჩამოყალიბებაზე, რომლებიც იმპერიაში მხოლოდ ფორმალურად შედიოდნენ.
 
 
 <center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
