*Empty MediaWiki Message*

--- a/Bluetooth.mw
+++ b/Bluetooth.mw
@@ -38,8 +38,8 @@
 *SAP-SIM Access Profile
 
 ==რესურსები ინტერნეტში==
-*[http://http://bluetooth.com/bluetooth/ Bluetooth]
-*[http://http://bluetooth.org/ Bluetooth]
+*[http://bluetooth.com/bluetooth/ Bluetooth]
+*[http://bluetooth.org/ Bluetooth]
 *[http://bluetomorrow.com/ Bluetooth]
 *[http://palowireless.com/bluetooth/ Bluetooth]
 
