/* ბარბაროსული სახელმწიფოების ჩამოყალიბება */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -367,6 +367,11 @@
 
 ამ მოვლენების შემდეგ იმპერატორი იძულებული გახდა დათანხმებულიყო იმპერიის ტერიტორიაზე ნახევრად დამოუკიდებელი ბარბაროსული სახელმწიფოების ჩამოყალიბებაზე, რომლებიც იმპერიაში მხოლოდ ფორმალურად შედიოდნენ.
 
+ასე [[418]] წელს, აკვიტანიაში დასახლებულმა ვესტგოთებმა შექმნეს პირველი ბარბაროსული სახელმწიფო, [[429]] წელს აფრიკაში გადასახლებულებმა სვევებმა შექმნეს ვანდალური სამეფო. გესტგოთები ადგილობრივ რომანიზებულ მოსახლეობასთან მშვიდობიან ურთიერთობებს ინარჩუნებდნენ, ხოლო ვანდალები სდევნიდნენ რომაელებს, ანგრევდნენ და ძარცვავდნენ ქალაქებს. [[435]] წელს ვანდალური სამეფო რომის მოკავშირედ სცნეს, ფორმალურად მათ უნდა რომის ინტერესები დაეცვათ, მაგრამ რეალურად რომმა საბოლოოდ დაკარგა აფრიკული პროვინციები. [[443]] წელს სამხრეთ გალიაში ბურგუნდიის სამეფო ჩამოყალიბდა, [[451]] წელს ბრიტანეთში კი ანგლოსაქსების სამეფო.
+
+ყველა ეს სამეფო მხოლოდ ფორმალურად ემორჩილებოდა რომის იმპერატორს. ამ პრიოდის განმავლობაში იმპერატორის კარი ყველანაერად ცდილობდა შეენარჩუნებინა იმპერიის არსებობის ილუზია.
+
+===ჰუნების შემოსევა===
 
 <center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
