*Empty MediaWiki Message*

--- a/ქაქუცა_ჩოლოყაშვილი.mw
+++ b/ქაქუცა_ჩოლოყაშვილი.mw
@@ -1,4 +1,4 @@
-[[სურათი:ქაქუცა ჩოლოყაშვილი.gif|thumb|pxl450|right|ქაქუცა ჩოლოყაშვილი]]
+[[სურათი:ქაქუცა ჩოლოყაშვილი.gif|thumb|right|ქაქუცა ჩოლოყაშვილი]]
 '''ქაიხოსრო (ქაქუცა) ჩოლოყაშვილი''' დაიბადა [[1888]] წლის [[14 ივლისი|14 ივლისს]] სოფელ [[მატანი|მატანში]]. სწავლობდა [[თბილისი|ტფილისის]] სათავადაზნაურო გიმნაზიაში. 21 წლის ასაკში ქაქუცა ჩოლოყაშვილი ჯარში გაიწვიეს, მსახურობდა [[ტვერი|ტვერის]] დრაგუნთა პოლკში. 1913 წელს ცოლად შეირთო ნინო მეღვინეთუხუცესი. 
 
 ==პირველი მსოფლიო ომი==
