--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -373,6 +373,14 @@
 
 ===ჰუნების შემოსევა===
 
+დაჩაჩანაგებული იმპერიისთვის ახალი საფრთხე ჰუნების სახით წარმოიშვა. ჰუნების ტომებს სათავეში [[ატილა]] ჩაუდგა. იგი ჯერ აღმოსავლეთ რომის იმპერიასი შეიჭრა , ხოლო შემდეგ გალიისკენ გაემართა. იგი საფრთხეს არა მარტო რომანიზირებული არისტოკრატიისთვის წარმოადგენდა, არამედ ბარბაროსული სახელმწიფოებისათვისაც. ჰუნების წინააღმდეგ გაერთიანდნენ ალანები, ვესტგოთები, გალები, ბურგუნდები და საქსები. მათ ჯარებს ფლავიუს აზციუსი ხელმძღვანელობდა.
+
+კოალიციის ჯარებსა და ჰუნებს შორის გადამწყვეტი შეტაკება მოხდა [[კატალაუნის ველზე]] [[451]] წლის ივნისში, ეს ბრძოლა კაცობრიობის ისტორიაში იყო ერთერთი ყველაზე დიდი და სისხლისმღვრელი. ამ ბრძოლაში ჰუნები დამარცხდნენ, ხოლო ატილას სიკვდილის შემდეგ ([[453]]) ჰუნები საფრთხეს აღარ წარმოადგენდნენ.
+
+===რომის აღება ვანდალების მიერ===
+
+ჰუნების საშიშროებამ ცოტახნით დააერთიანა რომაელები და გერმანული ტომები, მაგრამ კატალაუნის ბრზოლის შემდეგ იმპერიის დასლის პროცესები უფრო დაჩქარდა. ბარბაროსული სახელმწიფოები იმპერატორს ანგარიშსს აღარაფერში აღარ უყევდნენ.
+
 <center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
 [[კატეგორია:ძველი რომი]]
