--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -377,6 +377,7 @@
 
 კოალიციის ჯარებსა და ჰუნებს შორის გადამწყვეტი შეტაკება მოხდა [[კატალაუნის ველზე]] [[451]] წლის ივნისში, ეს ბრძოლა კაცობრიობის ისტორიაში იყო ერთერთი ყველაზე დიდი და სისხლისმღვრელი. ამ ბრძოლაში ჰუნები დამარცხდნენ, ხოლო ატილას სიკვდილის შემდეგ ([[453]]) ჰუნები საფრთხეს აღარ წარმოადგენდნენ.
 
+[[სურათი:Vandalen.jpg|thumb|რომის აღება ვანდალების მიერ 455 წელს]]
 ===რომის აღება ვანდალების მიერ===
 
 ჰუნების საშიშროებამ ცოტახნით დააერთიანა რომაელები და გერმანული ტომები, მაგრამ კატალაუნის ბრზოლის შემდეგ იმპერიის დასლის პროცესები უფრო დაჩქარდა. ბარბაროსული სახელმწიფოები იმპერატორს ანგარიშსს აღარაფერში აღარ უყევდნენ.
