/* რომის აღება ვანდალების მიერ */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -380,7 +380,11 @@
 [[სურათი:Vandalen.jpg|thumb|რომის აღება ვანდალების მიერ 455 წელს]]
 ===რომის აღება ვანდალების მიერ===
 
-ჰუნების საშიშროებამ ცოტახნით დააერთიანა რომაელები და გერმანული ტომები, მაგრამ კატალაუნის ბრზოლის შემდეგ იმპერიის დასლის პროცესები უფრო დაჩქარდა. ბარბაროსული სახელმწიფოები იმპერატორს ანგარიშსს აღარაფერში აღარ უყევდნენ.
+ჰუნების საშიშროებამ ცოტახნით დააერთიანა რომაელები და გერმანული ტომები, მაგრამ კატალაუნის ბრზოლის შემდეგ იმპერიის დასლის პროცესები უფრო დაჩქარდა. ბარბაროსული სახელმწიფოები იმპერატორს ანგარიშსს აღარაფერში აღარ უწევდნენ. ვესტგოთებმა თავისი სახელმწიფო ესპანეთის მიერთებით გააფართოვეს.
+
+ვანდალებმა ამასობაში შექმნეს ფლოტი და დაიწყეს სიცილიაში, სარდინიაში და კორსიკაში შემოსევები. [[455]] წელს მათ ისარგებლეს რავენის მთავრობის უძლურებით და  აიღეს რომი, რომელიც ეკლესიის მეთაურის - რომის პაპის რეზიდენცია იყო. ვანდალები 14 დღე ძარცვავდნენ ქალაქს. მათ ყველაფერი გაანადგურეს რისი წაღებაც ვერ შეძლეს. მას შემდეგ "ვანდალიზმი" გახდა რბევის და განადგურების ამღნიშნავი სიტყვა.
+
+
 
 <center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
