/* რომის აღება ვანდალების მიერ */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -384,7 +384,11 @@
 
 ვანდალებმა ამასობაში შექმნეს ფლოტი და დაიწყეს სიცილიაში, სარდინიაში და კორსიკაში შემოსევები. [[455]] წელს მათ ისარგებლეს რავენის მთავრობის უძლურებით და  აიღეს რომი, რომელიც ეკლესიის მეთაურის - რომის პაპის რეზიდენცია იყო. ვანდალები 14 დღე ძარცვავდნენ ქალაქს. მათ ყველაფერი გაანადგურეს რისი წაღებაც ვერ შეძლეს. მას შემდეგ "ვანდალიზმი" გახდა რბევის და განადგურების ამღნიშნავი სიტყვა.
 
+===იმპერიის დასასრული===
 
+ამგვარად ამ დროისთვის ესპანეთი და გალია სრულიად დამოუკიდებლები იყვნენ. გალიის ჩრდილოეთით გადმოსახლდნენ ფრანკები. რავენაში კი მიუხედავად იმპერიის უძლურებისა გრძელდებოდა ძალაუფლებისთვის ბრძოლა. იმპერატორები სწრაფად ცვლიდნენ ერთმანეთს და ისინი არანაერ ძალაუფლებას აღარ ფლოდნენ. გამონაკლისი მხოლოდ [[იულიუს მაიორიანუსი]] იყო ([[457]]-[[461]]). მან სცადა იმპერიის კონსოლიდაცია და შესთავაზა რამოდენიმე მნიშვნელოვანი რეფორმა, მან მოკლე ხნით მიახერხა გალიაში და ესპანეთში რომის კონტროლის აღდგენა, მაგრამ იმპერიის აღორძინება არც პროვინციალურ არისტოკრატიას, და მითუმეტეს არც ბარბაროს მეფეებს არ სურდათ, ამიტომ მათ მოაკვლევინეს იმპერატორი და იმპერიის აღორძინების უკანასკნელი იმედიც დასამარდა.
+
+ა
 
 <center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
