--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -388,7 +388,10 @@
 
 ამგვარად ამ დროისთვის ესპანეთი და გალია სრულიად დამოუკიდებლები იყვნენ. გალიის ჩრდილოეთით გადმოსახლდნენ ფრანკები. რავენაში კი მიუხედავად იმპერიის უძლურებისა გრძელდებოდა ძალაუფლებისთვის ბრძოლა. იმპერატორები სწრაფად ცვლიდნენ ერთმანეთს და ისინი არანაერ ძალაუფლებას აღარ ფლოდნენ. გამონაკლისი მხოლოდ [[იულიუს მაიორიანუსი]] იყო ([[457]]-[[461]]). მან სცადა იმპერიის კონსოლიდაცია და შესთავაზა რამოდენიმე მნიშვნელოვანი რეფორმა, მან მოკლე ხნით მიახერხა გალიაში და ესპანეთში რომის კონტროლის აღდგენა, მაგრამ იმპერიის აღორძინება არც პროვინციალურ არისტოკრატიას, და მითუმეტეს არც ბარბაროს მეფეებს არ სურდათ, ამიტომ მათ მოაკვლევინეს იმპერატორი და იმპერიის აღორძინების უკანასკნელი იმედიც დასამარდა.
 
-ა
+[[სურათი:RomulusAugustus.jpg|thumb|left|რომულუს ავგუსტული, რომის უკანასკნელი იმპერატორი]]
+ამ დროიდან იმპერიის ტახტი ბარბაროსთა მეფეების ხელში სათამაშოდ იქწცა. [[476]] წელს გვარდიის ხელმძღვანელმა ოდოაკრმა ჩამოაგდო 16 წლის რომის უკანასკნელი იმპერატორი, რომელსაც ბედის ირონიით იგივე სახელი ექვა რაც რომის ლეგენდარულ დამაარსებელს რომულუსს. მან ამით მოსპო იმპერატორის ინსტიტუტი როგორ ეგეთი.
+
+ასე დაასრულა არსებობა მსოფლიოს ერთერთმა უდიდესმა იმპერიამ, რომელიც აერთიანებდა მთელს ხმელთაშუაზღვისპირეთს და დასავლეთ ევროპას. ჩაესვენა ერთერთი უდიდესი ცივილიზაცია და ევროპა გადავარდა ათასწლეულით უკან - ბნელ შუასაუკუნეებში.
 
 <center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
