--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -393,6 +393,8 @@
 
 ასე დაასრულა არსებობა მსოფლიოს ერთერთმა უდიდესმა იმპერიამ, რომელიც აერთიანებდა მთელს ხმელთაშუაზღვისპირეთს და დასავლეთ ევროპას. ჩაესვენა ერთერთი უდიდესი ცივილიზაცია და ევროპა გადავარდა ათასწლეულით უკან - ბნელ შუასაუკუნეებში.
 
+==წყაროები==
+
 <center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
 [[კატეგორია:ძველი რომი]]
