--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -395,6 +395,11 @@
 
 ==წყაროები==
 
+* პლუტარქოსი
+* სვეტონიუსი
+* ტაციტუსი
+* რომის იმპერიის ისტორია (მინსკი 2000)
+
 <center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
 [[კატეგორია:ძველი რომი]]
