--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -395,10 +395,19 @@
 
 ==წყაროები==
 
-* პლუტარქოსი
-* სვეტონიუსი
-* ტაციტუსი
+* პლუტარქოსი - შედარებითი ბიოგრაფიები
+* სვეტონიუსი - 12 კეისარის ცხოვრება
+* ტაციტუსი - ანლები
 * რომის იმპერიის ისტორია (მინსკი 2000)
+
+==ბმულები==
+
+http://www.resourcesforhistory.com/map.htm
+
+http://www.roman-empire.net/
+
+http://ancientrome.ru/
+
 
 <center><table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
