--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -396,8 +396,8 @@
 ==წყაროები==
 
 * პლუტარქოსი - შედარებითი ბიოგრაფიები
-* სვეტონიუსი - 12 კეისარის ცხოვრება
-* ტაციტუსი - ანლები
+* გაიუს სვეტონიუს ტრანკვილუსი - 12 კეისარის ცხოვრება
+* პუბლიუს კორნელიუს ტაციტუსი - ანლები
 * რომის იმპერიის ისტორია (მინსკი 2000)
 
 ==ბმულები==
