--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -63,7 +63,7 @@
 ===ნერონი===
 [[სურათი:Nero.gif|thumb|left|ნერონი]]
 
-თავის პრინციპატის დასაწყისში [[ნერონი|ნერონი]] ჯერ არ ამჟღავნებდა იმ უარყოფით თვისებებს რითაც მოგვიანებით შევიდა ისტორიაში. როგორც ავღნიშნეთ იგი სულ 17 წლის იყო როდესაც გახდა იმპერატორი, მან იმპერიის მმართველობა სენატს მიანდო. იგი იმყოფებოდა თავისი ამღზრდელის [[სენეკა|ლუციუს ანეუს სენეკას]], პტრეტორიანელთა პრეფექტის, სექსტუს აფრანიუს ბურუსის და საკუთარი დედის გავლენის ქვეშ, ასე რომ პოლიტიკურ ცხოვრებაში იგი არანაერ მონაწილეობას არ იღებდა. უმეტესად იგი დაკავებული იყო სიმღერით და ლექსების წერით. მოგვიანებით იგი იმდენად მოექცა სენეკას გავლენის ქვეშ, რომ დედამისმა კლავდიუსის ვაჟის, [[ბრიტანიკუსი|ბრიტანიკუსის]] დაპირისპირება სცადა მისთვის, მაგრამ [[55]] წელს მოაკვლევინეს ბრიტანიკუსი, ხოლო [[59]] წელს ნერონმა საკუთარი დედა მოაკვლევინა. მისი შემდეგი მსხვერპლი გახდა მისი მეუღლე ოქტავია, რომელიც რომაელებს ძალიან უყვარდათ, მისი მკვლელობის შემდეგ ნერონის პოპულარობა ხალხში ძალიან დაეცა. 62 წელს მოკვდა ბურუსი, სენეკამ კი დაკარგა ნერონზე გავლენა და მას თავი მოაკვლევინეს.
+თავის პრინციპატის დასაწყისში [[ნერონი|ნერონი]] ჯერ არ ამჟღავნებდა იმ უარყოფით თვისებებს რითაც მოგვიანებით შევიდა ისტორიაში. როგორც ავღნიშნეთ იგი სულ 17 წლის იყო როდესაც გახდა იმპერატორი, მან იმპერიის მმართველობა სენატს მიანდო. იგი იმყოფებოდა თავისი ამღზრდელის [[სენეკა|ლუციუს ანეუს სენეკას]], პრეტორიანელთა პრეფექტის, სექსტუს აფრანიუს ბურუსის და საკუთარი დედის გავლენის ქვეშ, ასე რომ პოლიტიკურ ცხოვრებაში იგი არანაერ მონაწილეობას არ იღებდა. უმეტესად იგი დაკავებული იყო სიმღერით და ლექსების წერით. მოგვიანებით იგი იმდენად მოექცა სენეკას გავლენის ქვეშ, რომ დედამისმა კლავდიუსის ვაჟის, [[ბრიტანიკუსი|ბრიტანიკუსის]] დაპირისპირება სცადა მისთვის, მაგრამ [[55]] წელს მოაკვლევინეს ბრიტანიკუსი, ხოლო [[59]] წელს ნერონმა საკუთარი დედა მოაკვლევინა. მისი შემდეგი მსხვერპლი გახდა მისი მეუღლე ოქტავია, რომელიც რომაელებს ძალიან უყვარდათ, მისი მკვლელობის შემდეგ ნერონის პოპულარობა ხალხში ძალიან დაეცა. 62 წელს მოკვდა ბურუსი, სენეკამ კი დაკარგა ნერონზე გავლენა და მას თავი მოაკვლევინეს.
 
 [[64]] წლის ზაფხულში რომში საშინელი ხანძარი მოხდა, ქალაქის 14 უბნიდან 3 სრულიად განადურდა, ხოლო 7-ში შენობების უმეტესობა დაიწვა. უამრავი ადამიანი დაიღუპა. ქალაქში ჭორები დადიოდა, რომ იმპერატორმა თვითონ მოაწყო ხანძარი, რათა ქალაქის დაწვის პროცესის ხილვით მიეღო პოემა "ტროას" დაწერისთვის შთაგონება. ამ ჭორების უარსაყოფათ ნერონმა "მოძებნა" დამნაშავენი, ესენი ქრისტიანები აღმოჩნდნენ და მათ წინააღმდეგ სასტიკი, რეპრესიები დაიწყო. ხალხს, ვისაც ქრისტიანობაში ამხელდნენ, იჭერდნენ და ცირკის არენაზე ველურ ცხოველებს აგლეჯინებდნენ ან ჯვრებზე აცვამდნენ. დაზუსტებით უცნობია თუ ვინ იყო ხანძრის მომწყობი. იმდროინდელი ისტორიკოსი [[გაიუს სვეტონიუს ტრანკვილუსი]] არაორაზროვნათ მიუთითებს რომ დამნაშავე ნერონი იყო, მაგრამ ამის დამამტკიცებელი საბუთი არ არსებობს, თან უნდა გავითვალისწინოთ რომ ნერონი არ სარგებლობდა პოპულარობით და სვეტონიუსი შეიძლება მიკერძოვებული ყოფილიყო.
 
