/* ამ დღეს გარდაცვლილნი */

--- a/31_დეკემბერი.mw
+++ b/31_დეკემბერი.mw
@@ -6,6 +6,7 @@
 *[[1738]] : [[კორნუოლისი, ჩარლზ]] - ინგლისელი სამხედრო და სახელმწიფო მოღვაწე
 * [[1910]] : [[ხვიჩია, იპოლიტე]] -   ქართველი მსახიობი. 
 == ამ დღეს გარდაცვლილნი ==
+*[[192]] : [[კომოდუსი]] რომის იმპერატორი მოკლეს.
 *[[1384]] : [[ვიკლიფი, ჯონ]] - ინგლისელი თეოლოგი, რეფორმატორი.
 *[[1691]] : [[ბოილი, რობერტ]] -  ინგლისელი ქიმიკოსი და ფიზიკოსი.
 *[[1914]] : [[ჰალი]] - ინდოელი პოეტი და ლიტერატურათმცოდნე.
