/* ოქტავიან ავგუსტუსის პრინციპატი */

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -29,11 +29,11 @@
 
 მიუხედავად იმისა რომ გარეგნულად პრინცეპსტი მართავდა ქვეყანას სენატთან ერთან, მან აუკრძალა სენატორებს განსაკუთრებული ნებართვის გარეშე დაეტოვებინათ იტალია, რადგან ეშინოდა პროვინციებში მათი გავლენის ზრდის. ქალაქებში და პროვინციებში მან დანიშნა პრეფექტები, რომლებიც პირადად მის წინაშე აგებდნენ პასუხს. პრეტორიანულ გვარდიასაც სათავეში პრეფექტი ედგა, იმპერიაში ეს ერთერთი ყველაზე მაღალი პოსტი იყო.
 
-პროვინციებში აჯანყენები საკმაოდ ხშირად ხდებოდა, მაგრამ რომაელებს არ უჭირდათ მათი ჩახშობა.  ყველაზე სერიოზული აჯანყება იყო დალმაციაში და პანონიაში. (დუნაის პირეთი). [[ტიბერიუსი|ტიბერიუსმა]] შეკრიბა 20 ლეგიონი. აჯანყების ჩახშობა მოხერხდა დუნაელი ტომების ერთერთი ლიდერის ღალატის შედეგად. ამის შემდეგ იგი ეცადა დაეპყრო გერმანია, მოხდა არაერთი ლაშქრობა, რომლებსაც ტიბერიუსი და [[დრუზუსი]] ხელმძღვანელობდნენ, მარამ მნიშვნელოვან წარმატებებს ვერ მიაღწიეს, ხოლო [[ტევტობურის ტრის ბრძოლა|ტევტობურის ტრის ბრძოლაში]] კი 9 წელს მხედართმთავარი [[კვინტილიუს ვარუსი]] სასტიკად დამარცხდა, ჯარი კი განადგურდა.
+პროვინციებში აჯანყენები საკმაოდ ხშირად ხდებოდა, მაგრამ რომაელებს არ უჭირდათ მათი ჩახშობა.  ყველაზე სერიოზული აჯანყება იყო დალმაციაში და პანონიაში. (დუნაის პირეთი). [[ტიბერიუსი|ტიბერიუსმა]] შეკრიბა 20 ლეგიონი. აჯანყების ჩახშობა მოხერხდა დუნაელი ტომების ერთერთი ლიდერის ღალატის შედეგად. ამის შემდეგ იგი ეცადა დაეპყრო გერმანია, მოხდა არაერთი ლაშქრობა, რომლებსაც ტიბერიუსი და [[დრუზუსი]] ხელმძღვანელობდნენ, მარამ მნიშვნელოვან წარმატებებს ვერ მიაღწიეს, ხოლო [[ტევტობურის ტრის ბრძოლა|ტევტობურის ტრის ბრძოლაში]] კი [[9]] წელს მხედართმთავარი [[კვინტილიუს ვარუსი]] სასტიკად დამარცხდა, ჯარი კი განადგურდა.
 
 ამ აჯანყებების ჩახშობის გარდა ავგუსტუსს პრაქტიკულად არ უწარმოებია დამპყრობლური ომები. იმისი საგარეო პოლიტიკა აქტიური დიპლომატიით შემოიფარგლებოდა. იგი ყოველგვარად ცდილობდა მოსაზღვრე სახელმწიფოებთან და ტომებთან კარგი ურთიერთობა დაემყარებინა, ხელი მოაწერა სამშვიდობო ხელშეკრულებას პართიელებთან, რომლებმაც რომში დააბრუნეს კრასუსის და ანტონიუსის ლაშქრობებიდან დარჩენილი ტყვეები, ასევე დააბრუნეს დამარცხებული ლეგიონების სიმბოლოები.
 
-ოქტავიან ავგუსტუსი გარდაიცვალა 14 წელს, იგი როგორც მისი მალობილი ღმერთად იყო აღიარებული.
+ოქტავიან ავგუსტუსი გარდაიცვალა [[14]] წელს, იგი როგორც მისი მალობილი ღმერთად იყო აღიარებული.
 
 ==კლავდიუსების დინასტია==
 <small>იხ. [[იულიუს-კლავდიუსების დინასტია]]</small>
